# barbet

./: .coveragerc  .gitignore  README.rst  load_poetry.sh  mkdocs.sh  pixi.toml  pyproject.toml  seqbank-to-memmap.py  seqtree-ls.py  seqtree-representatives.py
.github/workflows/: docs.yml  testing.yml
barbet/: __init__.py  apps.py  data.py  embedding.py  markers.py  models.py  modules.py
barbet/embeddings/: esm.py
bloodhound/: _old_apps_fastai.py  _old_dataloaders.py  apps.py  data.py  dataloaders.py  embedding.py  markers.py  models.py  modelsx.py
bloodhound/embeddings/: alphafold.py  alphafold2.py  esm.py  prost_t5.py
bloodhound/embeddings/af/: AlphafoldBatchRunner.py  cf_utils.py  mmseq2.py  models.py  run_batch_cleaned.py  run_tests.py
docs/: api.rst  cli.rst  conf.py  index.rst  preprocessing.rst  training.rst
gambit/: __init__.py  _old_apps_fastai.py  apps.py  apps_lightning.py  dataloaders.py  embedding.py  esm.py  gtdbtk.py  lightning.py  models.py  preprocess-seqbank.py  preprocess2D.py  preprocess2Db.py
gambit/embeddings/: alphafold2.py  esm.py  plot.py  prost_t5.py  standardize.py
gambit/embeddings/alphafold2/: a2_config.py  a2_embedding.py  a2_model.py  a2_runner.py
gambit/torchapp2/: apps.py  cli.py  metrics.py  modules.py
slurms/: af-build-gene-array.slurm  barbet-train-ar53-production.slurm  barbet-train-ar53.slurm  barbet-train-bac120-production.slurm  barbet-train-bac120.slurm  bloodhound-train-ar53.slurm  bloodhound-train-bac120-production.slurm  bloodhound-train-bac120.slurm  bloodhound-train.slurm  esm-build-gene-array-ar53.slurm  esm-build-gene-array.slurm  esm-preprocess.slurm  esm-test-lengths.slurm  gambit-lightning.slurm  predict.slurm  preprocess-alphafold2.slurm  preprocess-esm.slurm  preprocess-prostt5.slurm  seqbank-to-memmap.slurm  seqtree-representatives.slurm  validate-ar53.slurm  validate-bac120.slurm  validate-memmap.slurm
tests/: test_apps.py  test_data.py  test_embedding.py  test_markers.py
tests/data/: MAG-GUT41.fa  bac120_mock_taxonomy_r226_reps.tsv
