[tool.poetry]
name = "Bloodhound"
version = "0.1.1"
description = "Geometric Analysis of MicroBIal Taxonomies"
authors = ["Wytamma Wirth, Robert Turnbull, Mar Quiroga <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/bloodhound-devs/bloodhound/"
documentation = "https://bloodhound-devs.github.io/bloodhound"
homepage = "https://github.com/bloodhound-devs/bloodhound/"
keywords = ["fastai", "torchapp", "pytorch", "deep learning", "command-line interface"]
# For classifiers see https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12" # Had to update the minium version from 3.9 to 3.10 because of Bio and biopython
torchapp = {git = "https://github.com/rbturnbull/torchapp.git", branch = "lightning"}
# hierarchicalsoftmax = "^1.1.0"
hierarchicalsoftmax = {git = "https://github.com/rbturnbull/hierarchicalsoftmax.git", rev = "torchmetrics"}
bio-corgi = {git = "https://github.com/rbturnbull/corgi.git", rev = "lightning"}

# alphafold = "^2.0.0" # PyPi version of alphafold is stuck at 2.0.0 and it won't work (throws error about missing alphafold.model and alphafold.model.tf
# alphafold = {git = "https://github.com/google-deepmind/alphafold.git", rev = "main"}

torch = "=2.2.0"
transformers = "^4.40.2"
sentencepiece = "^0.2.0"
dm-haiku = "^0.0.12"
jax = "^0.4.28"
tqdm = "^4.66.4"
jaxlib = "^0.4.28"
wandb = "^0.17.0"
biopython = "1.81" # ONLY USE 1.81! 1.83 won't work as Bio.Data.SCOPData module has been deprecated in 1.83 and it was not there before 1.78. Needed for alphafold >=2.3.2
lightning = "^2.3.3"
gtdbtk = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.1"
coverage = "^5.5"
autopep8 = "^1.5.7"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = ">=0.15.2"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
black = "^21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bloodhound = "bloodhound.apps:Bloodhound.main"
bloodhound-tools = "bloodhound.apps:Bloodhound.tools"

bloodhound-esm = "bloodhound.embeddings.esm:ESMEmbedding.tools"
bloodhound-prostt5 = "bloodhound.embeddings.prost_t5:ProstT5Embedding.main"
bloodhound-preprocess-alphafold2 = "bloodhound.embeddings.alphafold2:app"

bloodhound-preprocess-alphafold2-test = "bloodhound.embeddings.alphafold2:test"