[tool.poetry]
name = "Bloodhound"
version = "0.1.1"
description = "Geometric Analysis of MicroBIal Taxonomies"
authors = ["Wytamma Wirth, Robert Turnbull, Mar Quiroga <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/bloodhound-devs/bloodhound/"
documentation = "https://bloodhound-devs.github.io/bloodhound"
homepage = "https://github.com/bloodhound-devs/bloodhound/"
keywords = ["fastai", "torchapp", "pytorch", "deep learning", "command-line interface"]
# For classifiers see https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13" # Had to update the minium version from 3.9 to 3.10 because of Bio and biopython
torchapp = {git = "https://github.com/rbturnbull/torchapp.git", branch = "lightning"}
# hierarchicalsoftmax = "^1.1.0"
hierarchicalsoftmax = {git = "https://github.com/rbturnbull/hierarchicalsoftmax.git", rev = "torchmetrics"}
bio-corgi = {git = "https://github.com/rbturnbull/corgi.git", rev = "lightning"}

torch = "=2.2.0"
tqdm = "^4.66.4"
lightning = "^2.3.3"
gtdbtk = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
ipykernel = ">=6.6.1"
coverage = ">=5.5"
autopep8 = ">=1.5.7"
Sphinx = ">=5.0"
nbsphinx = ">=0.8.7"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
myst-parser = ">=0.15.2"
pre-commit = ">=2.15.0"
sphinx-copybutton = ">=0.4.0"
black = ">=21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bloodhound = "bloodhound.apps:Bloodhound.main"
bloodhound-tools = "bloodhound.apps:Bloodhound.tools"

bloodhound-esm = "bloodhound.embeddings.esm:ESMEmbedding.tools"
bloodhound-prostt5 = "bloodhound.embeddings.prost_t5:ProstT5Embedding.main"
bloodhound-preprocess-alphafold2 = "bloodhound.embeddings.alphafold2:app"

bloodhound-preprocess-alphafold2-test = "bloodhound.embeddings.alphafold2:test"